# CrefiProtocol-Stellar

./: .gitignore  README.md  tsconfig.json
app/: globals.css  layout.tsx
app/dashboard/: page.tsx
backend/: app.js  package.json
backend/src/controllers/: authController.js  internalController.js  loanController.js  marketController.js  poolController.js
backend/src/models/: userModel.js
backend/src/routes/: loanRoutes.js  marketRoutes.js  poolRoutes.js
backend/src/services/: appService.js  loanService.js  marketDataService.js  tinymanService.js  verifyService.js
backend/src/utils/: jwt.js
components/: BentoGrid.tsx  Footer.tsx  HeroSection.tsx  HowItWorks.tsx  Navbar.tsx  StatsTicker.tsx  WalletConnectModal.tsx  WalletSessionBootstrap.tsx
components/dashboard/: CreditStatus.tsx  PoolChart.tsx  PoolOperations.tsx  PoolValueChart.tsx  Sidebar.tsx  StatCards.tsx  TopBar.tsx
contracts/credit_system/: Cargo.toml
contracts/credit_system/src/: lib.rs
contracts/crefi_token/: Cargo.toml
contracts/crefi_token/src/: lib.rs
contracts/lending_pool/: Cargo.toml
contracts/lending_pool/src/: lib.rs
contracts/loan_manager/: Cargo.toml
contracts/loan_manager/src/: lib.rs
lib/: mockData.ts
src/utils/: apiClient.ts  authService.ts  loanService.ts  marketService.ts  poolService.ts  stellarTxBuilder.ts  walletService.ts
