[package]
name = "loan-manager"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "20.5.0"

[dev-dependencies]
soroban-sdk = { version = "20.5.0", features = ["testutils"] }

[dependencies.lending_pool]
package = "lending-pool"
path = "../lending_pool"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
overflow-checks = true